Fixed an issue with title line spacing as well as issues which sprang from this in terms of alignment

--- a/website/static/website/css/news.css
+++ b/website/static/website/css/news.css
@@ -2,12 +2,12 @@
     float: left;
     padding-right: 0px;
     padding-bottom: 0px;
-    padding-top: 5px;
+    padding-top: 2px;
     vertical-align: top;
 }
 
 .news_content{
-    padding-top: 0px;
+    padding-top: 5px;
     padding-left: 0px;
     padding-bottom: 0px;
     margin: 0 auto;
@@ -28,7 +28,7 @@
  */
 .line-clamp {
       position: relative;
-      max-height: 2.8em; /* exactly three lines */
+      max-height: 2.8em; /* exactly two lines*/
     }
 .line-clamp:after {
     position: absolute;
@@ -54,7 +54,7 @@
 
 .content-clamp {
       position: relative;
-      max-height: 8.4em; /* exactly three lines */
+      max-height: 8.6em; /* exactly six lines */
     }
 .content-clamp:after {
     position: absolute;
@@ -70,7 +70,7 @@
         display: -webkit-box;
         -webkit-line-clamp: 6;
         -webkit-box-orient: vertical;  
-        max-height:8.4em; /* I needed this to get it to work */
+        max-height:8.6em; /* This should be 1.4 * number of lines */
         height: auto;
     }
     .content-clamp:after {
@@ -92,14 +92,14 @@
     padding-left: 5px;
     padding-bottom: 0px;
     margin: 0 auto;
-    line-height: 100%
+    line-height: 17px;
     width: 100%;
     overflow: hidden;
 }
 
 
 .news_date{
-    padding-top: 0px;
+    padding-top: 3px;
     font-size: 10px;
     padding-left: 5px;
     padding-bottom: 0px;
